[tool.poetry]
name = "goit-algo2-hw-05"
version = "0.1.0"
description = ""
authors = ["Dmytro Lyfenko <d.lyfenko@gmail.com>"]
readme = "README.md"
packages = [{include = "goit_algo2_hw_05"}]

[tool.poetry.dependencies]
python = "^3.13"
bitarray = "^3.0.0"
mmh3 = "^5.0.1"
hyperloglog = "^0.0.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
